--- a/api/package.json
+++ b/api/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.4.0",
     "fastify": "^5.2.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "prisma": "^6.4.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
