--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,3 @@
-PORT="port"
-DATABASE_URL="url"
-JWT_SECRET="secret"
+PORT=3333
+DATABASE_URL="postgresql://user_concorri:password_concorri@localhost:5432/concorri_db"
+JWT_SECRET="aidhbauhgdab81263t12836215t3dadufvsadugdf"
