--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^7.17.0",
-    "@mantine/hooks": "^7.17.0",
+    "@heroui/button": "^2.2.13",
+    "@heroui/card": "^2.2.13",
+    "@heroui/input": "^2.4.13",
+    "@heroui/react": "^2.7.2",
+    "@heroui/system": "^2.4.10",
+    "@heroui/theme": "^2.4.9",
+    "@hookform/resolvers": "^4.1.0",
+    "framer-motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
