--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@heroui/avatar": "^2.2.10",
     "@heroui/button": "^2.2.13",
     "@heroui/card": "^2.2.13",
+    "@heroui/chip": "^2.2.10",
+    "@heroui/code": "^2.2.10",
+    "@heroui/dropdown": "^2.3.13",
     "@heroui/input": "^2.4.13",
+    "@heroui/navbar": "^2.2.12",
     "@heroui/react": "^2.7.2",
     "@heroui/system": "^2.4.10",
+    "@heroui/tabs": "^2.2.11",
     "@heroui/theme": "^2.4.9",
     "@hookform/resolvers": "^4.1.0",
     "framer-motion": "^12.4.7",
