✨feat: update README for environment setup and migration commands && enhance user seeder with bcrypt hashing

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch --env-file=.env src/server.ts",
-    "seed": "ts-node src/database/seeders/_seed.ts"
+    "seed": "tsx src/database/seeders/_seed.ts",
+    "db:studio": "npx prisma studio",
+    "db:migrate": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
