--- a/web/package.json
+++ b/web/package.json
@@ -19,14 +19,16 @@
     "@heroui/input": "^2.4.13",
     "@heroui/navbar": "^2.2.12",
     "@heroui/react": "^2.7.2",
-    "@heroui/system": "^2.4.10",
+    "@heroui/system": "^2.4.12",
     "@heroui/tabs": "^2.2.11",
-    "@heroui/theme": "^2.4.9",
+    "@heroui/theme": "^2.4.12",
+    "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.0",
-    "framer-motion": "^12.4.7",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.6.2",
+    "ky": "^1.8.0",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "zod": "^3.24.2"
   },
