--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@heroui/theme": "^2.4.12",
     "@heroui/toast": "^2.0.6",
     "@hookform/resolvers": "^4.1.0",
+    "cookies-next": "^5.1.0",
     "framer-motion": "^12.6.2",
     "ky": "^1.8.0",
     "next": "^15.2.4",
